testsuite/tests/python/project_unit_provider_invalid/test.out
Trying to load invalid project:
   ... got an exception: fatal error, cannot load the project tree
invalid.gpr:2:01: error: Expected ':=', got Termination
Trying to load not existing:
   ... got an exception: fatal error, cannot load the project tree
does_not_exist.gpr: error: project file "<working-dir>/does_not_exist.gpr" not found
Trying to load project with unknown target:
   ... got no exception
Trying to get unit: '\xe9'
   ... got no exception
   ... but we got diagnostics:
0:0-0:0: 'Could not find source file for \xe9 (body file)'
Trying to get unit: ' '
   ... got no exception
   ... but we got diagnostics:
0:0-0:0: 'Could not find source file for   (body file)'
Done.
